<resources>
    <string name="app_name"><font color="#000000">I Support Lockdown</font></string>
    <string name="name">Name</string>
    <string name="address">address</string>
    <string name="s_no">S.No</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="add_row">ADD ROW</string>
    <string name="send">SEND</string>
    <string name="shopkeeper_s_number">Shopkeeper\'s Number</string>
</resources>
