<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#F1F8E9"
    android:statusBarColor="#76FF03">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintBottom_toTopOf="@id/addrow"
        app:layout_constraintLeft_toLeftOf="@id/address">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintLeft_toLeftOf="@id/address"
        app:layout_constraintBottom_toTopOf="@id/addrow"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp">
    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:ignore="UselessParent">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/s_no"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_column="0"/>
            <TextView
                android:text="@string/item_name"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:textAlignment="center"
                android:layout_column="1"/>
            <TextView
                android:text="@string/quantity"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_column="2"
                app:layout_constraintRight_toRightOf="@id/table"
                />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:text="@string/_1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_column="0"/>

            <EditText
                android:id="@+id/item1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="8"
                android:text=""
                android:textAlignment="center"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                android:id="@+id/q1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="2"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="@id/table"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:text="@string/_2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_column="0"/>

            <EditText
                android:id="@+id/item2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="8"
                android:text=""
                android:textAlignment="center"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                android:id="@+id/q2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="2"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="@id/table"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:text="@string/_3"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_column="0"/>

            <EditText
                android:id="@+id/item3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="8"
                android:text=""
                android:textAlignment="center"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                android:id="@+id/q3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="2"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="@id/table"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </TableRow>
        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:text="@string/_4"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_column="0"/>

            <EditText
                android:id="@+id/item4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="8"
                android:text=""
                android:textAlignment="center"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                android:id="@+id/q4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="2"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="@id/table"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </TableRow>
        <TableRow
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/item5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="8"
                android:text=""
                android:textAlignment="center"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <EditText
                android:id="@+id/q5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="2"
                android:text=""
                android:textAlignment="center"
                app:layout_constraintRight_toRightOf="@id/table"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </TableRow>
    </TableLayout>
    </ScrollView>
    </LinearLayout>
    <Button
        android:id="@+id/addrow"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/add_row"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/send"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shopno"
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/addrow"
        app:layout_constraintRight_toLeftOf="@id/send">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/shopkeeper_s_number"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>